# meta-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRE_SUBMISSION_CHECKLIST.md  README.md  SETUP.md  inference.py  instructions.md  openenv.yaml  pyproject.toml  requirements.txt
app/: database.py  environment.py  main.py  models.py  session_store.py  tasks.py
baseline/: inference.py  rule_based.py
server/: app.py
