[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql-query-debugging-env"
version = "1.0.0"
description = "OpenEnv environment for SQL query debugging and optimization"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.0",
    "httpx==0.27.0",
    "huggingface_hub==0.26.2",
    "requests==2.32.3",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
