[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-escalation-desk"
version = "1.0.0"
description = "OpenEnv environment for customer support escalation and resolution decisions"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.0",
    "requests==2.32.3",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "openenv>=0.2.0",
]

[project.scripts]
server = "server.app:main"
